# prescriptive-scaling

./: CONTRIBUTING.md  FILELIST.txt  README.md  pyproject.toml  regenerate_paper_artifacts_from_scratch.sh
data/: top_models_by_base.csv
eval-sampling/: eval.py  seas_h100.sh
prescriptive_eval/: README.md  requirements.txt
prescriptive_eval/scripts/: _bootstrap.py  skill_frontier.py  skill_frontier_utils.py  skill_frontier_window.py  smooth_single_skill_frontier.py
prescriptive_eval/tables/: LifeArchitect.csv  additional_post_trained_models.csv  find_token_size.ipynb
scripts/: budget_only_design.py
scripts/artificial_analysis/: aime_sigmoid.py  plot_math500_vs_aime2025.py
scripts/data/: build_new_leaderboard_results_with_tokens.py  download_artificial_analysis_aime2025.py  download_artificial_analysis_math500.py  download_open_llm_leaderboard_contents.py  enrich_new_leaderboard_results_with_last_modified.py  generate_envelopes.py  generate_manifests.py
scripts/epoch_ai/: fit_benchmarks_runs_sigmoid_frontiers.py
scripts/evaluate/: pinball_baselines_from_points.py  sigmoid_binned_pinball.py
scripts/lifearchitect/: lifearchitect_sigmoid.py
scripts/open_llm_leaderboard/: open_llm_leaderboard_task_pair_comparison.py
scripts/regression/: artifact_manifest.py
scripts/run/: ablate_lambda_period4_singlek.py  ispline_pinball_optimizer.py  latent_pca_sigmoid.py  monotone_envelope.py  sensitivity_kappa_lambda.py
tables/: LifeArchitect.xlsx  _cache_hf_lastModified_new_leaderboard.json  new_leaderboard_results_with_tokens.csv  top_models_by_base.csv
(+141 files in other folders)
